# RTMC-Framework

./: main.py  requirements.txt
RCMC-Compiler/: .gitignore  README.md  main.py  requirements.txt  test_basic.py  vm_runner.py
RCMC-Compiler/Document/: ARCHITECTURE.md  ARRAY_AND_STRUCT_FEATURES.md
RCMC-Compiler/examples/: adc_sensor.mc  advanced_struct_test.mc  final_test.rtmc  minimal_message_test.mc  semaphore.rtmc  simple_message_test.mc  simple_struct.mc  struct_example.mc  timeout_lib.rtmc  timeout_test.rtmc
RCMC-Compiler/src/: __init__.py
RCMC-Compiler/tests/: test_array_struct_features.py  test_ast_features.py  test_basic.py  test_compiler.py  test_demo.py  test_demo_parsing.py  test_parser_features.py
RTMC-Compiler/: .gitignore  MIGRATION_NOTES.md  README.md  main.py  requirements.txt  vm_runner.py
RTMC-Compiler/Document/: ARCHITECTURE.md  HEXADECIMAL_SUPPORT_DOCUMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  UNION_SUPPORT_DOCUMENTATION.md
RTMC-Compiler/examples/: all_brace_styles_test.rtmc  blink.rtmc  cast_test.rtmc  (+23 more)
RTMC-VSCode-Extention/: .eslintrc.js  BUILD.md  CHANGELOG.md  README.md  sample.rtmc
RTMC_Compiler/: README.md
RTMC_Interpreter/FreeRTOS/CORTEX_M0+_RP2040/RTMCInterpreter/: CMakeLists.txt  README.md  USAGE_GUIDE.md  rtmc_binary_loader.c  rtmc_binary_loader.h  rtmc_interpreter.c  rtmc_interpreter.h  rtmc_interpreter_example_main.c  rtmc_sender.py
RTMC_VSCodeExtention/: .gitignore  BUILD.md  EXTENSION_SUMMARY.md  LICENSE  README.md  language-configuration.json  package.json  sample.rtmc  tsconfig.json
(+146 files in other folders)
